[gd_scene load_steps=5 format=3 uid="uid://ceeh8kufk378v"]

[ext_resource type="Script" path="res://addons/mapod4d_editor/main_screen/main_screen.gd" id="1_o2kiv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lij7s"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.337255, 0.337255, 0.337255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8xwp"]
bg_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6y11"]
bg_color = Color(0.376471, 0.376471, 0.376471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 6

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_o2kiv")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/Margin"]
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 1147.0
offset_bottom = 643.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Margin/HBoxContainer"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 638.0
theme_override_constants/separation = 7

[node name="MetaverseLocation" type="OptionButton" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 300.0
offset_bottom = 31.0
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "dev"
popup/item_0/id = 0
popup/item_1/text = "local"
popup/item_1/id = 1

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer"]
layout_mode = 2
offset_top = 38.0
offset_right = 300.0
offset_bottom = 142.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lij7s")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
offset_right = 292.0
offset_bottom = 26.0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.627451, 0.74902, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_a8xwp")
text = "Metavese building"
vertical_alignment = 1

[node name="MetaverseId" type="LineEdit" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 30.0
offset_right = 292.0
offset_bottom = 61.0
placeholder_text = "Metaverse ID"
max_length = 20
clear_button_enabled = true

[node name="CreateMetaverse" type="Button" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 65.0
offset_right = 182.0
offset_bottom = 96.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Create new Metaverse"

[node name="MetaverseList" type="ItemList" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_top = 149.0
offset_right = 300.0
offset_bottom = 600.0
size_flags_vertical = 3

[node name="RefreshMetaverseList" type="Button" parent="ScrollContainer/Margin/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 607.0
offset_right = 184.0
offset_bottom = 638.0
size_flags_horizontal = 0
text = "refresh Metarverse list"

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/Margin/HBoxContainer"]
layout_mode = 2
offset_left = 304.0
offset_right = 1142.0
offset_bottom = 638.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_t6y11")
